# rust-example-api

./: .gitignore  Cargo.toml  Readme.md
entity/: Cargo.toml
entity/src/: comment.rs  mod.rs  reply.rs
entity/src/entities/: article.rs  comment.rs  prelude.rs  reply.rs  session.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230729_165354_alter_user_table.rs
service/: Cargo.toml
service/src/mutations/: ArticleMutation.rs  ReplyMutation.rs  UserMutation.rs  article_mutation.rs  comment_mutation.rs  mod.rs
service/src/queries/: CommentQuery.rs  ReplyQuery.rs  UserQuery.rs  article_query.rs  comment_query.rs  mod.rs  user_query.rs
src/: main.rs
