[package]
name = "test-api-rust-edition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
service = { path = "service" }
actix-web = "4"
dotenvy = "0.15"
serde = "1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }